manifest/objects/Msg_Bus_Picklist_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickList_Field_API_Name__c</fullName>
        <label>PickList Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickList_Mapping__c</fullName>
        <label>PickList Mapping</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Msg Bus Picklist Mapping</label>
    <pluralLabel>Msg Bus Picklist Mapping</pluralLabel>
</CustomObject>